Fix sidebar collection info z-index order esp. for Firefox rendering. Fixes ARC-368.

--- a/app/assets/stylesheets/dul-arclight/dul_styles.scss
+++ b/app/assets/stylesheets/dul-arclight/dul_styles.scss
@@ -373,6 +373,10 @@ a {
 
 
 #sidebar {
+  z-index: 20;
+  @include media-breakpoint-down(md) {
+    z-index: 1200;
+  }
   background: white;
   padding-top: 10px;
   box-shadow: 1px 0 1px -1px rgba(0, 0, 0, 0.06),
